--- a/css/styles.css
+++ b/css/styles.css
@@ -146,12 +146,12 @@ header {
 }
 
 .logo {
-    max-width: 100px;
+    width: 60px;
 }
 
 .logo-img {
     border-radius: 50%;
-    max-height: 80px;
+    max-height: 60px;
 }
 
 .nav {
